refine remove_plugin impl and PEP8 settings

--- a/tox.ini
+++ b/tox.ini
@@ -19,5 +19,5 @@ commands = py.test --flakes -m flakes pluggy.py test_pluggy.py
 minversion=2.0
 #--pyargs --doctest-modules --ignore=.tox
 addopts= -rxsX 
-pep8ignore = E501 E401 E225 E261 E128 E124 E302
+pep8ignore = E501 E128 E127
 norecursedirs = .tox ja .hg
