- bring pluggy to 0.3 - offering a add_hookcall_monitoring interface for adding before/after   functions. - a tox.ini that makes pluggy run against pytest27 and pytest trunk

--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,20 @@
 [tox]
-envlist=pep8,flakes,py26,py27,py34,pypy
+envlist=check,{py26,py27,py34,pypy}-{pytest27,pytest}
 
 [testenv]
 commands= py.test {posargs:test_pluggy.py}
 deps=
-    pytest
+    pytest27: pytest>=2.7.0,<2.8.0
+    pytest: pytest>=2.8.0.dev1
 
-[testenv:pep8]
-deps = pytest-pep8
-commands = py.test --pep8 
-
-[testenv:flakes]
+[testenv:check]
 usedevelop=True
-deps = pytest-flakes
-commands = py.test --flakes -m flakes pluggy.py test_pluggy.py
+deps = pytest>=2.7.0,<2.8.0
+       pytest-pep8
+       pytest-flakes
+commands =
+    py.test --pep8
+    py.test --flakes -m flakes --pyargs pluggy test_pluggy
 
 [pytest]
 minversion=2.0
