--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=check,{py26,py27,py34,pypy}-{pytest27,pytest}
+envlist=check,{py26,py27,py34,py35,pypy}-{pytest27,pytest}
 
 [testenv]
 commands= py.test {posargs:test_pluggy.py}
