shift test file into own directory so we can use it to run it against installed version of package

--- a/tox.ini
+++ b/tox.ini
@@ -2,10 +2,10 @@
 envlist=check,{py26,py27,py34,py35,pypy}-{pytest27,pytest}
 
 [testenv]
-commands= py.test {posargs:test_pluggy.py}
+commands= py.test {posargs:testing/test_pluggy.py}
 deps=
     pytest27: pytest>=2.7.0,<2.8.0
-    pytest: pytest>=2.8.0.dev1
+    pytest: pytest>=2.8.0.dev5
 
 [testenv:check]
 usedevelop=True
@@ -14,7 +14,7 @@ deps = pytest>=2.7.0,<2.8.0
        pytest-flakes
 commands =
     py.test --pep8
-    py.test --flakes -m flakes --pyargs pluggy test_pluggy
+    py.test --flakes -m flakes pluggy.py testing/test_pluggy.py
 
 [pytest]
 minversion=2.0
