Fix manifest: include testing directory

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,5 @@ include README.rst
 include setup.py
 include tox.ini
 include LICENSE
-include test_pluggy.py
+graft testing
+recursive-exclude * *.pyc *.pyo
