Use links in CHANGELOG and add rst-link to "check" tox-env

--- a/tox.ini
+++ b/tox.ini
@@ -13,9 +13,11 @@ usedevelop=True
 deps = pytest>=2.7.0,<2.8.0
        pytest-pep8
        pytest-flakes
+       restructuredtext_lint 
 commands =
     py.test --pep8
     py.test --flakes -m flakes pluggy.py testing/test_pluggy.py
+    rst-lint CHANGELOG.rst README.rst
 
 [pytest]
 minversion=2.0
