--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,16 @@ commands =
     py.test --flakes -m flakes pluggy.py testing/test_pluggy.py
     rst-lint CHANGELOG.rst README.rst
 
+
+[testenv:docs]
+deps =
+    sphinx
+    pygments
+
+commands =
+    sphinx-build \
+        -b html \
+        {toxinidir}/docs {toxinidir}/build/html-docs
 [pytest]
 minversion=2.0
 #--pyargs --doctest-modules --ignore=.tox
