--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=check,py{26,27,34,35,py}-pytest{28,29,30}
+envlist=check,py{26,27,34,35,36,py}-pytest{28,29,30}
 
 [testenv]
 commands= py.test {posargs:testing/}
@@ -7,13 +7,13 @@ deps=
   pytest28: pytest~=2.8.0
   pytest29: pytest~=2.9.0
   pytest30: pytest~=3.0.0
-
+  pytest-benchmark
 
 [testenv:check]
 deps =
   flake8
-  restructuredtext_lint 
-commands = 
+  restructuredtext_lint
+commands =
   flake8 pluggy.py setup.py testing
   rst-lint CHANGELOG.rst README.rst
 
@@ -30,7 +30,7 @@ commands =
 [pytest]
 minversion=2.0
 #--pyargs --doctest-modules --ignore=.tox
-addopts= -rxsX 
+addopts= -rxsX
 norecursedirs = .tox ja .hg .env*
 
 [flake8]
