Add a benchmark tox env

--- a/tox.ini
+++ b/tox.ini
@@ -2,11 +2,16 @@
 envlist=check,py{26,27,34,35,36,py}-pytest{28,29,30}
 
 [testenv]
-commands= py.test {posargs:testing/}
+commands=py.test {posargs:testing/}
 deps=
   pytest28: pytest~=2.8.0
   pytest29: pytest~=2.9.0
   pytest30: pytest~=3.0.0
+
+[testenv:benchmark]
+commands=py.test {posargs:testing/benchmark.py}
+deps=
+  pytest
   pytest-benchmark
 
 [testenv:check]
@@ -17,21 +22,20 @@ commands =
   flake8 pluggy.py setup.py testing
   rst-lint CHANGELOG.rst README.rst
 
-
 [testenv:docs]
 deps =
     sphinx
     pygments
-
 commands =
     sphinx-build \
         -b html \
         {toxinidir}/docs {toxinidir}/build/html-docs
+
 [pytest]
 minversion=2.0
 #--pyargs --doctest-modules --ignore=.tox
-addopts= -rxsX
-norecursedirs = .tox ja .hg .env*
+addopts=-rxsX
+norecursedirs=.tox ja .hg .env*
 
 [flake8]
-max-line-length = 99
+max-line-length=99
