Add pygments dep for docs env

--- a/tox.ini
+++ b/tox.ini
@@ -18,18 +18,17 @@ deps=
 deps =
   flake8
   restructuredtext_lint
+  pygments
 commands =
   flake8 pluggy.py setup.py testing
   rst-lint CHANGELOG.rst README.rst
 
 [testenv:docs]
 deps =
-    sphinx
-    pygments
+  sphinx
+  pygments
 commands =
-    sphinx-build \
-        -b html \
-        {toxinidir}/docs {toxinidir}/build/html-docs
+  sphinx-build -b html {toxinidir}/docs {toxinidir}/build/html-docs
 
 [pytest]
 minversion=2.0
