--- a/.travis.yml
+++ b/.travis.yml
@@ -1,38 +1,44 @@
 sudo: false
 language: python
-python:
-    - '2.6'
-    - '2.7'
-    - '3.3'
-    - '3.4'
-    - '3.5'
-    - '3.6'
-    - pypy
-    - nightly
-
-# command to install dependencies
-install: "pip install -U tox"
-
-# command to run tests
-env:
-  matrix:
-    - TOXENV=py-pytest28
-    - TOXENV=py-pytest29
-    - TOXENV=py-pytest30
 
 matrix:
   include:
-    - python: '2.7'
-      env: TOXENV=check
     - python: '3.6'
       env: TOXENV=check
+    - python: '3.6'
+      env: TOXENV=docs
+    - python: '2.6'
+      env: TOXENV=py26-pytestrelease
     - python: '2.7'
-      env: TOXENV=benchmark
+      env: TOXENV=py27-pytestrelease
+    - python: '3.3'
+      env: TOXENV=py33-pytestrelease
+    - python: '3.4'
+      env: TOXENV=py34-pytestrelease
+    - python: '3.5'
+      env: TOXENV=py35-pytestrelease
+    - python: '3.6'
+      env: TOXENV=py36-pytestrelease
+    - python: 'pypy'
+      env: TOXENV=pypy-pytestrelease
+    - python: 'nightly'
+      env: TOXENV=py37-pytestrelease
+    - python: '2.7'
+      env: TOXENV=py27-pytestmaster
+    - python: '2.7'
+      env: TOXENV=py27-pytestfeatures
+    - python: '3.6'
+      env: TOXENV=py36-pytestmaster
+    - python: '3.6'
+      env: TOXENV=py36-pytestfeatures
     - python: '3.6'
       env: TOXENV=benchmark
 
+install:
+  - pip install -U tox
+
 script:
- - tox --recreate -e $TOXENV
+  - tox
 
 notifications:
   irc:
