Test using the locally installed pluggy

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,8 @@ envlist=check,docs,py{26,27,34,35,36,py}-pytestrelease,py{27,36}-pytest{master,f
 
 [testenv]
 commands=py.test {posargs:testing/}
+setenv=
+  _PYTEST_SETUP_SKIP_PLUGGY_DEP=1
 deps=
   pytestrelease: pytest
   pytestmaster: git+https://github.com/pytest-dev/pytest.git@master
