Turned warnings into errors
- Fix two correct warnings
- Used pytest.warns() around a valid warning being issued

Should remove the warning exception for #81 when we tackle that.

Fix #78

--- a/tox.ini
+++ b/tox.ini
@@ -37,6 +37,10 @@ minversion=2.0
 #--pyargs --doctest-modules --ignore=.tox
 addopts=-rxsX
 norecursedirs=.tox ja .hg .env*
+filterwarnings =
+  error
+  # inspect.getargspec() ignored, should be fixed in #81
+  ignore:inspect.getargspec().*deprecated
 
 [flake8]
 max-line-length=99
