Build cython extension in packaging
When cython is installed always rebuild the C sources, when
not installed use whatever C sources were included in the sdist.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,3 +5,5 @@ include tox.ini
 include LICENSE
 graft testing
 recursive-exclude * *.pyc *.pyo
+include pluggy/callers/cythonized.pyx
+include pluggy/callers/cythonized.c
