Include cython in tox builds

--- a/tox.ini
+++ b/tox.ini
@@ -9,12 +9,14 @@ deps=
   pytestrelease: pytest
   pytestmaster: git+https://github.com/pytest-dev/pytest.git@master
   pytestfeatures: git+https://github.com/pytest-dev/pytest.git@features
+  cython
 
 [testenv:benchmark]
-commands=py.test {posargs:testing/benchmark.py}
+commands=py.test testing/benchmark.py {posargs}
 deps=
   pytest
   pytest-benchmark
+  cython
 
 [testenv:check]
 deps =
