Include cython in tox benchmark tests

--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ commands=pytest {posargs:testing/benchmark.py}
 deps=
   pytest
   pytest-benchmark
+  cython
 
 [testenv:linting]
 skip_install = true
