--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ jobs:
 
 install:
   - pip install -U pip
-  - pip install -U --force-reinstall setuptools tox
+  - pip install -U --force-reinstall setuptools tox cython
 
 script:
   - tox
