--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,7 @@ matrix:
       env: TOXENV=benchmark
 
 install:
-  - pip install -U setuptools pip
-  - pip install -U tox
+  - pip install -U setuptools pip tox cython
 
 script:
   - tox
