Use towncrier and a custom tox environment to prepare a release
Fix #66

--- a/tox.ini
+++ b/tox.ini
@@ -42,3 +42,15 @@ filterwarnings =
 
 [flake8]
 max-line-length=99
+
+[testenv:release]
+decription = do a release, required posarg of the version number
+basepython = python3.6
+skipsdist = True
+usedevelop = True
+passenv = *
+deps =
+    colorama
+    gitpython
+    towncrier
+commands = python scripts/release.py {posargs}
