Use "pluggy" in changelog title
(btw sorry to push branches directly to the repo, I'm in a hurry so I'm doing this using the GH UI).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ package = "pluggy"
 package_dir = "pluggy"
 filename = "CHANGELOG.rst"
 directory = "changelog/"
+title_format = "pluggy {version} ({project_date})"
 template = "changelog/_template.rst"
 
   [[tool.towncrier.type]]
