Try to reproduce the problem in #160

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,8 @@ deps=
 
 [testenv:benchmark]
 commands=py.test {posargs:testing/benchmark.py}
+setenv=
+  SETUPTOOLS_SCM_PRETEND_VERSION=0.7.0
 deps=
   pytest
   pytest-benchmark
