--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
-envlist=check,docs,py{27,34,35,36,py}-pytestrelease,py{27,36}-pytest{master,features}
+envlist=linting,docs,py{27,34,35,36,py}-pytestrelease,py{27,36}-pytest{master,features}
 
 [testenv]
-commands=py.test {posargs:testing/}
+commands=pytest {posargs:testing/}
 setenv=
   _PYTEST_SETUP_SKIP_PLUGGY_DEP=1
 deps=
@@ -11,19 +11,17 @@ deps=
   pytestfeatures: git+https://github.com/pytest-dev/pytest.git@features
 
 [testenv:benchmark]
-commands=py.test {posargs:testing/benchmark.py}
+commands=pytest {posargs:testing/benchmark.py}
 deps=
   pytest
   pytest-benchmark
 
-[testenv:check]
-deps =
-  flake8
-  restructuredtext_lint
-  pygments
-commands =
-  flake8 pluggy.py setup.py testing
-  rst-lint CHANGELOG.rst README.rst
+[testenv:linting]
+skipsdist = True
+usedevelop = True
+basepython = python3.6
+deps = pre-commit
+commands = pre-commit run --all-files --show-diff-on-failure
 
 [testenv:docs]
 deps =
