--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,12 @@ repos:
     -   id: black
         args: [--safe, --quiet]
         language_version: python3.6
+-   repo: https://github.com/asottile/blacken-docs
+    rev: v0.2.0
+    hooks:
+    -   id: blacken-docs
+        additional_dependencies: [black==18.6b4]
+        language_version: python3.6
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v1.3.0
     hooks:
