--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ sudo: false
 language: python
 
 stages:
-- test
+- name: test
+  if: tag IS NOT present
 - name: deploy
   if: repo = pytest-dev/pluggy AND tag IS present
 
