Setup coverage reporting  [skip appveyor]

--- a/tox.ini
+++ b/tox.ini
@@ -2,13 +2,18 @@
 envlist=linting,docs,py{27,34,35,36,py,py3}-pytestrelease,py{27,36}-pytest{master,features}
 
 [testenv]
-commands=pytest {posargs:testing/}
+commands=
+  {env:_PLUGGY_TOX_CMD:pytest} {posargs}
+  coverage: coverage report -m
+  coverage: coverage xml
 setenv=
   _PYTEST_SETUP_SKIP_PLUGGY_DEP=1
+  coverage: _PLUGGY_TOX_CMD=coverage run -m pytest
 deps=
   pytestrelease: pytest
   pytestmaster: git+https://github.com/pytest-dev/pytest.git@master
   pytestfeatures: git+https://github.com/pytest-dev/pytest.git@features
+  coverage: coverage
 
 [testenv:benchmark]
 commands=pytest {posargs:testing/benchmark.py}
@@ -32,6 +37,7 @@ commands =
 
 [pytest]
 minversion=2.0
+testpaths = testing
 #--pyargs --doctest-modules --ignore=.tox
 addopts=-rxsX
 norecursedirs=.tox ja .hg .env*
