tox.ini: pytest: addopts, testpaths
norecursedirs is not necessary anymore with testpaths.

--- a/tox.ini
+++ b/tox.ini
@@ -32,9 +32,9 @@ commands =
 
 [pytest]
 minversion=2.0
+testpaths = testing
 #--pyargs --doctest-modules --ignore=.tox
-addopts=-rxsX
-norecursedirs=.tox ja .hg .env*
+addopts=-ra
 filterwarnings =
   error
 
