--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,18 +1,18 @@
 repos:
 -   repo: https://github.com/ambv/black
-    rev: 18.6b4
+    rev: 19.3b0
     hooks:
     -   id: black
         args: [--safe, --quiet]
         language_version: python3.6
 -   repo: https://github.com/asottile/blacken-docs
-    rev: v0.2.0
+    rev: v0.5.0
     hooks:
     -   id: blacken-docs
-        additional_dependencies: [black==18.6b4]
+        additional_dependencies: [black==19.3b0]
         language_version: python3.6
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v1.3.0
+    rev: v2.1.0
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
@@ -25,8 +25,8 @@ repos:
         files: ^(CHANGELOG.rst|HOWTORELEASE.rst|README.rst|changelog/.*)$
         language: python
         additional_dependencies: [pygments, restructuredtext_lint]
-        python_version: python3.6
+        language_version: python3.6
 -   repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.0.0
+    rev: v1.3.0
     hooks:
     -   id: rst-backticks
