skip installation in linting env

--- a/tox.ini
+++ b/tox.ini
@@ -22,8 +22,7 @@ deps=
   pytest-benchmark
 
 [testenv:linting]
-skipsdist = True
-usedevelop = True
+skip_install = true
 basepython = python3.6
 deps = pre-commit
 commands = pre-commit run --all-files --show-diff-on-failure
