--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,7 +26,8 @@ install:
   - echo PyPy installed
   - pypy --version
 
-  - C:\Python35\python -m pip install tox
+  - C:\Python35\python -m pip install -U pip
+  - C:\Python35\python -m pip install -U setuptools tox
 
 build: false  # Not a C# project, build stuff at the test step instead.
 
