--- a/.travis.yml
+++ b/.travis.yml
@@ -59,7 +59,7 @@ jobs:
 
 install:
   - pip install -U pip
-  - pip install -U setuptools tox
+  - pip install -U --force-reinstall setuptools tox
 
 script:
   - tox
