--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,7 +27,7 @@ install:
   - pypy --version
 
   - C:\Python35\python -m pip install -U pip
-  - C:\Python35\python -m pip install -U setuptools tox
+  - C:\Python35\python -m pip install -U --force-reinstall setuptools tox
 
 build: false  # Not a C# project, build stuff at the test step instead.
 
