Add testing for py38 on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,8 @@ jobs:
       env: TOXENV=pypy3-pytestrelease-coverage
     - python: '3.7'
       env: TOXENV=py37-pytestrelease-coverage
+    - python: '3.8-dev'
+      env: TOXENV=py38-pytestrelease-coverage
     - python: '2.7'
       env: TOXENV=py27-pytestmaster-coverage
     - python: '2.7'
