--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=linting,docs,py{27,34,35,36,37,38,py,py3}-pytestrelease,py{36,37}-pytest{master,features}
+envlist=linting,docs,py{27,34,35,36,37,38,py,py3},py{36,37}-pytest{master,features}
 
 [testenv]
 commands=
@@ -9,11 +9,11 @@ commands=
 setenv=
   _PYTEST_SETUP_SKIP_PLUGGY_DEP=1
   coverage: _PLUGGY_TOX_CMD=coverage run -m pytest
+  pytestmaster: _PYTEST_DEP=git+https://github.com/pytest-dev/pytest.git@master
+  pytestfeatures: _PYTEST_DEP=git+https://github.com/pytest-dev/pytest.git@features
 deps=
-  pytestrelease: pytest
-  pytestmaster: git+https://github.com/pytest-dev/pytest.git@master
-  pytestfeatures: git+https://github.com/pytest-dev/pytest.git@features
   coverage: coverage
+  {env:_PYTEST_DEP:pytest}
 
 [testenv:benchmark]
 commands=pytest {posargs:testing/benchmark.py}
