setup.py/tox: add/use "testing" extras_require

--- a/tox.ini
+++ b/tox.ini
@@ -9,11 +9,11 @@ commands=
 setenv=
   _PYTEST_SETUP_SKIP_PLUGGY_DEP=1
   coverage: _PLUGGY_TOX_CMD=coverage run -m pytest
-  pytestmaster: _PYTEST_DEP=git+https://github.com/pytest-dev/pytest.git@master
-  pytestfeatures: _PYTEST_DEP=git+https://github.com/pytest-dev/pytest.git@features
+extras=testing
 deps=
   coverage: coverage
-  {env:_PYTEST_DEP:pytest}
+  pytestmaster: git+https://github.com/pytest-dev/pytest.git@master
+  pytestfeatures: git+https://github.com/pytest-dev/pytest.git@features
 
 [testenv:benchmark]
 commands=pytest {posargs:testing/benchmark.py}
