--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ jobs:
       env: TOXENV=pypy3-coverage
     - python: '3.7'
       env: TOXENV=py37-coverage
-    - python: '3.8-dev'
+    - python: '3.8'
       env: TOXENV=py38-coverage
     - python: '3.6'
       env: TOXENV=py36-pytestmaster-coverage
