tox,ci: change pytestmaster -> pytestmain
pytest changed the branch name.

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ setenv=
 extras=testing
 deps=
   coverage: coverage
-  pytestmaster: git+https://github.com/pytest-dev/pytest.git@master
+  pytestmain: git+https://github.com/pytest-dev/pytest.git@main
 
 [testenv:benchmark]
 commands=pytest {posargs:testing/benchmark.py}
