--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           # Commented stuff is in preparation for that.
           # "ubuntu-py35",
           # "ubuntu-py36",
-          # "ubuntu-py36-pytestmaster",
+          # "ubuntu-py36-pytestmain",
           # "ubuntu-py37",
           # "ubuntu-py38",
           # "ubuntu-pypy3",
@@ -63,10 +63,10 @@ jobs:
           #   python: "3.6"
           #   os: ubuntu-latest
           #   tox_env: "py36"
-          # - name: "ubuntu-py36-pytestmaster"
+          # - name: "ubuntu-py36-pytestmain"
           #   python: "3.6"
           #   os: ubuntu-latest
-          #   tox_env: "py36-pytestmaster"
+          #   tox_env: "py36-pytestmain"
           # - name: "ubuntu-py37"
           #   python: "3.7"
           #   os: ubuntu-latest
