--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=linting,docs,py{36,37,38,py3},py{36,37}-pytest{master}
+envlist=linting,docs,py{36,37,38,39,py3},py{36,37}-pytest{main}
 
 [testenv]
 commands=
