Mark the library as Mature in metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ author = Holger Krekel
 author_email = holger@merlinux.eu
 url = https://github.com/pytest-dev/pluggy
 classifiers =
-    Development Status :: 4 - Beta
+    Development Status :: 6 - Mature
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
     Operating System :: POSIX
