--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,9 @@ deps=
 commands=pytest {posargs:testing/benchmark.py}
 deps=
   pytest
-  pytest-benchmark
+  # Once pytest lifts its pluggy<1.0 constraint, the pytest-benchmark
+  # constraint can be removed.
+  pytest-benchmark==3.1.1
 
 [testenv:linting]
 skip_install = true
