Restore use_scm_version in setup.py
Despite adding it also to pyproject.toml, it doesn't work for `pip
install -e .` and probably other stuff like that, so it got version
`0.0.0`.

This reverts 8cea267099a1979d962f6b91bb60a22b13292bc5 "Pin an older
pytest-benchmark for now" - the real problem was the above.

--- a/tox.ini
+++ b/tox.ini
@@ -18,9 +18,7 @@ deps=
 commands=pytest {posargs:testing/benchmark.py}
 deps=
   pytest
-  # Once pytest lifts its pluggy<1.0 constraint, the pytest-benchmark
-  # constraint can be removed.
-  pytest-benchmark==3.1.1
+  pytest-benchmark
 
 [testenv:linting]
 skip_install = true
