switch to main as primary branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,13 +3,13 @@ name: main
 on:
   push:
     branches:
-      - master
+      - main
     tags:
       - "*"
 
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   build:
