--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ dev =
 testing =
     pytest
     pytest-benchmark
-
+    mypy
+    importlib-metadata>=0.12 # keep in sync
 [devpi:upload]
 formats=sdist.tgz,bdist_wheel
