WIP: move things around to prevent issues with mypyc an cython

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,8 @@ commands=
   {env:_PLUGGY_TOX_CMD:pytest} {posargs}
   coverage: coverage report -m
   coverage: coverage xml
+usedevelop=
+  develop: true
 setenv=
   _PYTEST_SETUP_SKIP_PLUGGY_DEP=1
   coverage: _PLUGGY_TOX_CMD=coverage run -m pytest
