--- a/tox.ini
+++ b/tox.ini
@@ -45,7 +45,7 @@ filterwarnings =
 max-line-length=99
 
 [testenv:release]
-decription = do a release, required posarg of the version number
+description = do a release, required posarg of the version number
 basepython = python3
 skipsdist = True
 usedevelop = True
