--- a/.coveragerc
+++ b/.coveragerc
@@ -12,3 +12,15 @@ source = pluggy/
   */lib/python*/site-packages/pluggy/
   */pypy*/site-packages/pluggy/
   *\Lib\site-packages\pluggy\
+
+[report]
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+
+    if TYPE_CHECKING:
+
+    if __name__ == .__main__.:
+
+    # Ignore coverage on lines solely with `...`
+    ^\s*\.\.\.\s*$
