--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,23 +1,24 @@
 repos:
 -   repo: https://github.com/ambv/black
-    rev: 21.7b0
+    rev: 22.8.0
     hooks:
     -   id: black
         args: [--safe, --quiet]
 -   repo: https://github.com/asottile/blacken-docs
-    rev: v1.10.0
+    rev: v1.12.1
     hooks:
     -   id: blacken-docs
-        additional_dependencies: [black==21.7b0]
+        additional_dependencies: [black==22.6.0]
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.1.0
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
     -   id: flake8
+        args: [--min-python-version, "3.7.0"]
         additional_dependencies: [flake8-typing-imports]
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.931
+    rev: v0.981
     hooks:
     -   id: mypy
         files: ^(src/|testing/)
@@ -36,7 +37,7 @@ repos:
     hooks:
     -   id: rst-backticks
 -   repo: https://github.com/asottile/pyupgrade
-    rev: v2.23.3
+    rev: v2.38.2
     hooks:
     -   id: pyupgrade
-        args: [--py36-plus]
+        args: [--py37-plus]
