--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ requires = [
   "setuptools-scm",
   "wheel",
 ]
+build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
 write_to = "src/pluggy/_version.py"
