--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       matrix:
         name: [
           "windows-py36",
-          "windows-py310",
+          "windows-py311",
           "windows-pypy3",
 
           "ubuntu-py36",
@@ -29,6 +29,7 @@ jobs:
           "ubuntu-py38",
           "ubuntu-py39",
           "ubuntu-py310",
+          "ubuntu-py311",
           "ubuntu-pypy3",
           "ubuntu-benchmark",
 
@@ -41,12 +42,12 @@ jobs:
             python: "3.6"
             os: windows-latest
             tox_env: "py36"
-          - name: "windows-py310"
+          - name: "windows-py311"
             python: "3.10"
             os: windows-latest
-            tox_env: "py310"
+            tox_env: "py311"
           - name: "windows-pypy3"
-            python: "pypy3"
+            python: "pypy3.9"
             os: windows-latest
             tox_env: "pypy3"
           - name: "ubuntu-py36"
@@ -78,9 +79,13 @@ jobs:
             python: "3.10"
             os: ubuntu-latest
             tox_env: "py310"
+          - name: "ubuntu-py311"
+            python: "3.11"
+            os: ubuntu-latest
+            tox_env: "py311"
             use_coverage: true
           - name: "ubuntu-pypy3"
-            python: "pypy3"
+            python: "pypy3.9"
             os: ubuntu-latest
             tox_env: "pypy3"
             use_coverage: true
@@ -98,12 +103,12 @@ jobs:
             tox_env: "docs"
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         fetch-depth: 0
 
     - name: Set up Python ${{ matrix.python }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python }}
 
@@ -131,11 +136,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v4
         with:
           python-version: "3.8"
 
@@ -148,7 +153,7 @@ jobs:
         run: python setup.py sdist bdist_wheel
 
       - name: Publish package
-        uses: pypa/gh-action-pypi-publish@v1.4.1
+        uses: pypa/gh-action-pypi-publish@v1.5.1
         with:
           user: __token__
           password: ${{ secrets.pypi_token }}
