--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,33 @@
 repos:
+-   repo: https://github.com/PyCQA/autoflake
+    rev: v1.7.7
+    hooks:
+    -   id: autoflake
+        name: autoflake
+        args: ["--in-place", "--remove-unused-variables", "--remove-all-unused-imports"]
+        language: python
+        files: \.py$
+-   repo: https://github.com/asottile/reorder_python_imports
+    rev: v3.9.0
+    hooks:
+    -   id: reorder-python-imports
+        args: ['--application-directories=.:src', --py37-plus]
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v2.1.0
+    hooks:
+    -   id: trailing-whitespace
+    -   id: end-of-file-fixer
+    -   id: flake8
+        additional_dependencies: [flake8-typing-imports]
+-   repo: https://github.com/pre-commit/pygrep-hooks
+    rev: v1.9.0
+    hooks:
+    -   id: rst-backticks
+-   repo: https://github.com/asottile/pyupgrade
+    rev: v3.2.2
+    hooks:
+    -   id: pyupgrade
+        args: [--py37-plus]
 -   repo: https://github.com/psf/black
     rev: 22.10.0
     hooks:
@@ -9,20 +38,6 @@ repos:
     hooks:
     -   id: blacken-docs
         additional_dependencies: [black==22.10.0]
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.1.0
-    hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: flake8
-        additional_dependencies: [flake8-typing-imports]
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.990
-    hooks:
-    -   id: mypy
-        files: ^(src/|testing/)
-        args: []
-        additional_dependencies: [pytest]
 -   repo: local
     hooks:
     -   id: rst
@@ -31,12 +46,10 @@ repos:
         files: ^(CHANGELOG.rst|HOWTORELEASE.rst|README.rst|changelog/.*)$
         language: python
         additional_dependencies: [pygments, restructuredtext_lint]
--   repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.9.0
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.990
     hooks:
-    -   id: rst-backticks
--   repo: https://github.com/asottile/pyupgrade
-    rev: v3.2.2
-    hooks:
-    -   id: pyupgrade
-        args: [--py37-plus]
+    -   id: mypy
+        files: ^(src/|testing/)
+        args: []
+        additional_dependencies: [pytest]
