--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,18 +1,16 @@
-name: main
+name: test
 
 on:
   push:
     branches:
       - main
-    tags:
-      - "*"
 
   pull_request:
     branches:
       - main
 
 jobs:
-  build:
+  test:
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -113,30 +111,3 @@ jobs:
       env:
         CODECOV_NAME: ${{ matrix.name }}
       run: bash scripts/upload-coverage.sh -F GHA,${{ runner.os }}
-
-  deploy:
-    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags') && github.repository == 'pytest-dev/pluggy'
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.8"
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install --upgrade wheel setuptools setuptools_scm
-
-      - name: Build package
-        run: python setup.py sdist bdist_wheel
-
-      - name: Publish package
-        uses: pypa/gh-action-pypi-publish@v1.5.1
-        with:
-          user: __token__
-          password: ${{ secrets.pypi_token }}
