--- a/tox.ini
+++ b/tox.ini
@@ -24,8 +24,13 @@ deps=
 deps =
   sphinx
   pygments
+  towncrier
 commands =
-  sphinx-build -W -b html {toxinidir}/docs {toxinidir}/build/html-docs
+  python scripts/towncrier-draft-to-file.py
+  # the '-t changelog_towncrier_draft' tags makes sphinx include the draft
+  # changelog in the docs; this does not happen on ReadTheDocs because it uses
+  # the standard sphinx command so the 'changelog_towncrier_draft' is never set there
+  sphinx-build -W -b html {toxinidir}/docs {toxinidir}/build/html-docs -t changelog_towncrier_draft {posargs:}
 
 [pytest]
 minversion=2.0
