Make new-style wrappers use explicit `wrapper=True`
Previously new-style wrappers were implied by the function being a
generator, however that broke a use case of a non-wrapper impl being a
generator as a way to return an Iterator result. This is legitimate, and
used at least by conda (see #403).

Therefore, change to require an explicit `wrapper=True`. Also adds a
test for the iterator-returning case.

Fix #405.

--- a/.coveragerc
+++ b/.coveragerc
@@ -23,5 +23,7 @@ exclude_lines =
 
     if __name__ == .__main__.:
 
+    raise NotImplementedError
+
     # Ignore coverage on lines solely with `...`
     ^\s*\.\.\.\s*$
