Add type maker to the library
Related: #191
Related: https://peps.python.org/pep-0561/

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,5 +3,6 @@ include README.rst
 include setup.py
 include tox.ini
 include LICENSE
+include src/pluggy/py.typed
 graft testing
 recursive-exclude * *.pyc *.pyo
