--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ classifiers =
 [options]
 packages =
     pluggy
+include_package_data = True
 install_requires =
     importlib-metadata>=0.12;python_version<"3.8"
 python_requires = >=3.7
