--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=linting,docs,py{37,38,39,310,311,py3},py{38}-pytest{main}
+envlist=docs,py{38,39,310,311,py3},py{38}-pytest{main}
 
 [testenv]
 commands=
