docs: require newer Sphinx in RTD
By default <2 is used, but we want to use new features.

Refs #428

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,6 +5,7 @@ python:
      # Without this, sphinx can't find pluggy's version.
      - method: pip
        path: .
+     - requirements: docs/requirements.txt
 
 build:
   os: ubuntu-22.04
