--- a/tox.ini
+++ b/tox.ini
@@ -22,9 +22,7 @@ deps=
 
 [testenv:docs]
 deps =
-  sphinx
-  pygments
-  towncrier
+    -r{toxinidir}/docs/requirements.txt
 commands =
   python scripts/towncrier-draft-to-file.py
   # the '-t changelog_towncrier_draft' tags makes sphinx include the draft
