Export pluggy's typing
Fix #428.

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,8 @@ dev =
 testing =
     pytest
     pytest-benchmark
+[options.package_data]
+pluggy = py.typed
 
 [devpi:upload]
 formats=sdist.tgz,bdist_wheel
