--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ license = MIT
 platforms = unix, linux, osx, win32
 author = Holger Krekel
 author_email = holger@merlinux.eu
-url = https://github.com/pytest-dev/pluggy
+url = https://github.com/SundayZhuozhou/pluggy
 classifiers =
     Development Status :: 6 - Mature
     Intended Audience :: Developers
