--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ setenv=
 extras=testing
 deps=
   coverage: coverage
-  pytestmain: git+https://github.com/pytest-dev/pytest.git@main
+  pytestmain: git+https://github.com/SundayZhuozhou/pytest.git@main
 
 [testenv:benchmark]
 commands=pytest {posargs:testing/benchmark.py}
