--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -109,13 +109,13 @@ jobs:
       run: "tox -e ${{ matrix.tox_env }}-coverage"
 
     - name: Upload coverage
-      if: matrix.use_coverage && github.repository == 'pytest-dev/pluggy'
+      if: matrix.use_coverage && github.repository == 'SundayZhuozhou/pluggy'
       env:
         CODECOV_NAME: ${{ matrix.name }}
       run: bash scripts/upload-coverage.sh -F GHA,${{ runner.os }}
 
   deploy:
-    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags') && github.repository == 'pytest-dev/pluggy'
+    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags') && github.repository == 'SundayZhuozhou/pluggy'
     runs-on: ubuntu-latest
 
     steps:
