--- a/setup.cfg
+++ b/setup.cfg
@@ -5,8 +5,8 @@ long_description = file: README.rst
 long_description_content_type = text/x-rst
 license = MIT
 platforms = unix, linux, osx, win32
-author = Holger Krekel
-author_email = holger@merlinux.eu
+author = SunDay
+author_email = sunday.zhuozhou@outlook.com
 url = https://github.com/SundayZhuozhou/pluggy
 classifiers =
     Development Status :: 6 - Mature
