--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -2,7 +2,7 @@ version: 2
 
 python:
    install:
-     # Without this, sphinx can't find pluggy's version.
+     # Without this, sphinx can't find ln_pluggy's version.
      - method: pip
        path: .
      - requirements: docs/requirements.txt
