--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = pluggy
+name = ln_pluggy
 description = plugin and hook calling mechanisms for python
 long_description = file: README.rst
 long_description_content_type = text/x-rst
@@ -7,7 +7,7 @@ license = MIT
 platforms = unix, linux, osx, win32
 author = SunDay
 author_email = sunday.zhuozhou@outlook.com
-url = https://github.com/SundayZhuozhou/pluggy
+url = https://github.com/SundayZhuozhou/ln_pluggy
 classifiers =
     Development Status :: 6 - Mature
     Intended Audience :: Developers
@@ -29,7 +29,7 @@ classifiers =
 
 [options]
 packages =
-    pluggy
+    ln_pluggy
 python_requires = >=3.8
 package_dir =
     =src
@@ -43,7 +43,7 @@ testing =
     pytest
     pytest-benchmark
 [options.package_data]
-pluggy = py.typed
+ln_pluggy = py.typed
 
 [devpi:upload]
 formats=sdist.tgz,bdist_wheel
