--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ repos:
 - repo: https://github.com/astral-sh/ruff-pre-commit
   rev: "v0.12.0"
   hooks:
-    - id: ruff
+    - id: ruff-check
       args: ["--fix"]
     - id: ruff-format
 -   repo: https://github.com/PyCQA/autoflake
